tests/ui/deprecation/deprecated-unstable-method-in-staged-api.stderr
error: use of deprecated method `Foo::foo`: text
  --> $DIR/deprecated-unstable-method-in-staged-api.rs:17:6
   |
LL |     .foo();
   |      ^^^
   |
note: the lint level is defined here
  --> $DIR/deprecated-unstable-method-in-staged-api.rs:3:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to 1 previous error

